# yamyam-agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  pytest.ini
config/models/: gpt-4o-mini.yaml
mcp/: registry.py  server.py
mcp/mcp_tools/: tools.py
mcp/resources/: info.py
mcp/tools/: __init__.py  menu.py  popular_restaurants.py  resources.py
prompts/: system.yaml  user.yaml
src/: agent.py  studio_graph.py
src/agents/: agent.py
src/clients/: mcp_client.py
src/utils/: config.py  prompt_loader.py
src/yamyam_agent/: __init__.py  agent.py  cli.py  mcp_client.py  studio_graph.py  tool_adapter.py
src/yamyam_agent/prompts/: __init__.py  system_prompt.py  system_prompt.txt
src/yamyam_agent/utils/: prompt_loader.py
tests/: conftest.py  test_agent.py  test_agent_integration.py
